--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 
     <script src="https://kit.fontawesome.com/37e2b5e678.js" crossorigin="anonymous"></script>
+
+    <link rel="shortcut icon" href="images/portfolio.png" type="image/x-icon">
+   
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
