--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 </div>
  </div>
 </section>
-<!-- what i do in section start -->
+<!-- what i do section start -->
  <section class="skills">
     <h3 class="section-title text-center">What I do</h3>
-    <p class="section-desscription text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+    <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
     <div class="skills-container">
         <!-- .skill*4>img+h4.skills-title+p.skill-description -->
