--- a/index.html
+++ b/index.html
@@ -151,8 +151,11 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
 
 </section>
 </main>    
+
 <footer class="secondary-bg">
-<div class="footer-column">
+    
+<div class="footer-container">
+    <div class="footer-column">
     <div >
     <h3 class="section-title">Lets Connect</h3>
     <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
@@ -174,7 +177,10 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
         <input class="btn-primary" type="submit" value="submit">
     </form>
 </div>
-
+</div>
+<div class="copyright-section">
+        <p>&copy; developed by PRChaity.</p>
+    </div>
 </footer>
 </body>
 </html>
